--- a/Path1/index.html
+++ b/Path1/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Cookie Filler Test</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Cookie Filler</h1>
-    <p>This page will attempt to fill the browser's cookie storage for testing purposes.</p>
+    <p>
+      This page will attempt to fill the browser's cookie storage for testing
+      purposes.
+    </p>
     <button id="fillCookiesButton">Fill Cookies</button>
 
     <script>
-        function fillCookies() {
-            const maxCookies = 180;  // Safe limit for most browsers
-            const cookieSize = 4000; // ~4KB per cookie
-            const baseName = 'test_cookie_';
-            const payload = 'x'.repeat(cookieSize - baseName.length - 25); // adjust for overhead
+      function fillCookies() {
+        let promptCount = parseInt(prompt("How many cookies?", "180"));
 
-            for (let i = 0; i < maxCookies; i++) {
-                document.cookie = `${baseName}${i}=${payload}; path=/TestSite/Path1/index.html`;
-            }
+        const maxCookies =
+          typeof promptCount === "number" && !isNaN(promptCount)
+            ? promptCount
+            : 180; // Safe limit for most browsers
+        const cookieSize = 4000; // ~4KB per cookie
+        const baseName = "test_cookie_";
+        const payload = "x".repeat(cookieSize - baseName.length - 25); // adjust for overhead
 
-            console.log('Cookies set. Check document.cookie or browser dev tools.');
+        for (let i = 0; i < maxCookies; i++) {
+          document.cookie = `${baseName}${i}=${payload}; path=/TestSite/Path1/index.html`;
         }
 
-        document.getElementById('fillCookiesButton').addEventListener('click', fillCookies);
+        console.log("Cookies set. Check document.cookie or browser dev tools.");
+      }
+
+      document
+        .getElementById("fillCookiesButton")
+        .addEventListener("click", fillCookies);
     </script>
-</body>
+  </body>
 </html>
