--- a/Path1/index.html
+++ b/Path1/index.html
@@ -27,7 +27,9 @@
             ? promptCount
             : defaultCount; // Safe limit for most browsers
         const baseName = "test_cookie_";
-        const payload = "x".repeat(cookieSize - baseName.length - 25); // adjust for overhead
+        const payload = "x".repeat(
+          Math.max(1, cookieSize - baseName.length - 25)
+        ); // adjust for overhead
 
         for (let i = 0; i < maxCookies; i++) {
           document.cookie = `${baseName}${i}=${payload}; path=/TestSite/Path1/index.html`;
