--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <iframe src="./Path1/index.html" width="100%" height="500px"></iframe>
 <iframe src="./Path2/index.html" width="100%" height="500px"></iframe>
+<iframe src="./Path3/index.html" width="100%" height="500px"></iframe>
+<iframe src="./Path4/index.html" width="100%" height="500px"></iframe>
